--- a/style.css
+++ b/style.css
@@ -1,1 +1,197 @@
+body {
+    font-family: sans-serif;
+    background-color: orange;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    margin-bottom: 20px;
+    position: relative;
+    
+}
+
+
+.button {
+    background-color: #36bbce;
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    font-size: 24px;
+    border-radius: 10px;
+    display: block;
+}
+
+nav {
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
+    padding: 25px 100px 25px 95px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-link {
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 36px;
+    margin-top: 45px;
+    margin-bottom: 40px;
+}
+
+.post-text {
+    font-size: 24px;
+}
+
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.post {
+    background-color: white;
+    padding: 15px 45px 30px 45px;
+    width: 400px;
+    margin: 20px;
+    position: relative;
+}
+
+.article-but {
+    text-decoration: none;
+    background-color: #133aac;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px 75px 10px 75px;
+    display: block;
+}
+
+.full-image {
+    margin: 100px 0px 100px 0px;
+}
+
+.social {
+    display: block;
+    width: 30px;
+}
+
+footer {
+    background-color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 30px 30px 20px 45px;
+}
+
+.footer-text {
+    font-size: 24px;
+    margin-right: 30px;
+}
+
+.footer-text span {
+    color: #850AE5;
+    font-weight: bolder;
+}
+
+.logo{
+    width:600px;
+    height: 250px;
+}
+
+.nav-link{
+    border-radius: 10px;
+    background: rgb(0, 191, 255);
+    color: black
+}
+
+.servers{
+    height: 200px;
+}
+
+footer{
+    text-decoration: none;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 30px;
+    background-color:rgb(0, 191, 255) ;
+}
+
+
+
+aside{
+    position: fixed;
+    right: 0;
+    top: 400px;
+    background-color: #3c0470;
+    border-radius: 20px;
+    width: 90px;
+    height: 300px;
+    padding: 20px;
+}
+
+.aside-text{
+    color: red;
+    font-size: 15px;
+    padding: 10px;
+}
+
+.contact{
+    margin: 0px 0px 20px 20px;
+    display: block;
+    width: 40px;
+}
+
+.h22{
+    position: relative;
+}
+
+main img{
+    opacity: 0.6;
+}
+
+main img:hover{
+    opacity:1;
+    width: 420px;
+    height: 270px;
+
+}
+    
+    
+footer img{
+    width: 100px;
+    height: 100px;
+    background: orange;
+    opacity:0.7;
+}
+
+footer img:hover{
+    width: 150px;
+    height: 150px;
+    background: orange;
+    opacity:1;
+}
+
+.nav-link:hover{
+    right:5px;
+    font-weight:bold;
+}
+
+.article-but:hover{
+    font-weight: bold;
+    text-decoration:underline dashed  orange;
+}
+
+
+
+
 
